[project]
name = "fortis_engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "rasterio>=1.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    # ... other dev dependencies
]

[tool.pytest.ini_options]
addopts = [
    "--cov=fortis_engine",  # Replace 'my_module' with the name of your module/package
    "--cov-report=term", # Show coverage report in the terminal
    "--cov-report=html", # Generate an HTML coverage report
]

[tool.coverage.run]
source = ["fortis_engine"]

[tool.coverage.report]
# exclude_lines is a list of regular expressions.
# Here we exclude code used for type checking,
# which is usually not executed.
exclude_lines = [
  "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fortis_data = { path = "../fortis_data", develop = true } 
