[project]
name = "fortis-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
package = true

[tool.pyright]
venvPath = "../.."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fortis"]