[project]
name = "fortis-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "rasterio>=1.4.3",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=fortis-engine",  # Replace 'my_module' with the name of your module/package
    "--cov-report=term", # Show coverage report in the terminal
    "--cov-report=html", # Generate an HTML coverage report
]

[tool.coverage.run]
source = ["fortis-engine"]

[tool.coverage.report]
# exclude_lines is a list of regular expressions.
# Here we exclude code used for type checking,
# which is usually not executed.
exclude_lines = [
  "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.uv]
package = true

[tool.pyright]
venvPath = "../.."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fortis"]
